--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="style.css">
+	</head>
 	<body>
 		<h1>Schnitzel On A Stick</h1>
 		<p>Is absolutely shit at programming. But I'm trying to get better, so watch out for me, world. I'm going to become Bill Gates 2: Electric Boogaloo.</p>
