--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<h1>Schnitzel On A Stick</h1>
-		<p>Go away I'll be back soon</p>
+		<p>Is absolutely shit at programming. But I'm trying to get better, so watch out for me, world. I'm going to become Bill Gates 2: Electric Boogaloo.</p>
 	</body>
 </html>
